test/src/e2e_vm_tests/test_programs/should_fail/dbg_wrong_args_count/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/dbg_wrong_args_count
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/dbg_wrong_args_count
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling script dbg_wrong_args_count (test/src/e2e_vm_tests/test_programs/should_fail/dbg_wrong_args_count)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/dbg_wrong_args_count/src/main.sw:4:13
  |
2 | 
3 | fn main() {
4 |     let _ = __dbg();
  |             ^^^^^^^ Call to "dbg" expects 1 argument(s)
5 |     let _ = __dbg(1, 2);
6 | }
  |
____

error
 --> test/src/e2e_vm_tests/test_programs/should_fail/dbg_wrong_args_count/src/main.sw:5:13
  |
3 | fn main() {
4 |     let _ = __dbg();
5 |     let _ = __dbg(1, 2);
  |             ^^^^^^^^^^^ Call to "dbg" expects 1 argument(s)
6 | }
  |
____

  Aborting due to 2 errors.
error: Failed to compile dbg_wrong_args_count
